// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container Can render with a custom baseFontSize 1`] = `
.c0 {
  margin: 0 auto;
  padding: 0 1em;
  max-width: 85.71428571428571em;
}

<div
  className="c0"
  size="large"
>
  Foo
</div>
`;

exports[`Container Can render with custom size 1`] = `
.c0 {
  margin: 0 auto;
  padding: 0 1em;
  max-width: 62em;
}

<div
  className="c0"
  size="medium"
>
  Foo
</div>
`;

exports[`Container Can render with theme size 1`] = `
.c0 {
  margin: 0 auto;
  padding: 0 1em;
  max-width: 31.25em;
}

<div
  className="c0"
  size="custom"
>
  Foo
</div>
`;

exports[`Container renders defaults correctly 1`] = `
.c0 {
  margin: 0 auto;
  padding: 0 1em;
  max-width: 75em;
}

<div
  className="c0"
  size="large"
>
  Foo
</div>
`;
